display current question + login
