# apps/server/config/swagger.yml
@@ -51,6 +51,26 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Category'
+  '/categories/{id}':
+    get:
+      tags:
+        - Categories
+      summary: Get a specific category by id
+      description: Get a specific category by id
+      operationId: getCategoryById
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          description: id of the category you want
+          required: true
+          type: string
+      responses:
+        '200':
+          description: category fetched
+          schema:
+            $ref: '#/definitions/Category'
   /questions/:
     get:
       tags:
