# apps/server/services/categories.js
@@ -7,3 +7,13 @@ var mongoose = require('./../modules/mongoose.js');
 exports.getAllCategories = function(req, res, callback){
   return mongoose.Category.find({}).exec();
 };
+
+/**
+ * Get a specific Category from the database
+ * @param req, request object that contains the id of the requested Category
+ */
+exports.getCategory = function(id){
+  return mongoose.Category.findOne({
+    _id: id
+  }).exec();
+};
